--- a/Tris/Html/Style.css
+++ b/Tris/Html/Style.css
@@ -20,12 +20,18 @@ p#currentPlayer {
     font-size: 18px;
     color: black;
 }
+.bt{ border-right: solid black;
+    border-bottom: solid black;
+    border-width: 1px;
+    margin: 0 auto;
+    padding: 0px auto;
 
+}
 table {
     text-align: center;
     align-items: center;
     margin: 0 auto;
-    width: 100%;
+    width: 50%;
     border-collapse: collapse;
 }
 
@@ -38,10 +44,10 @@ td {
 }
 
 button {
-    width: 100%;
-    height: 100%;
-    font-size: 24px;
+    width: 50%;
+    height: 50%;
+    font-size: 20px;
     background: none;
-    border: none;
+    border: solid black;
     cursor: pointer;
 }
